@@ -6,5 +6,5 @@ config KERNELPATCHER_MODULE
 	bool "Kernel Patcher Module"
 	default y
 	---help---
-	  Say Y here if you want to enable to use of this module.
+	  Say Y here if you want to enable the use of this module.
 
